[metadata]
name = smace
version = 0.0
author = Gianluigi Lopardo
author_email = Gianluigi.Lopardo@inria.fr
description = Semi-Model-Agnostic Contextual Explainer library
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT
url = https://github.com/gianluigilopardo/smace
project_urls =
    Homepage = http://github.com/gianluigilopardo/smace
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >= 3.7
zip_safe = False
install_requires =
    numpy==1.20.3
    pandas==1.2.5
    cvxpy==1.1.15
    shap==0.39.0
    lime==0.2.0.1
    matplotlib==3.4.3
    xgboost==1.4.2
    scikit-learn==0.24.2
    scipy==1.7.1

[options.packages.find]
include =
    smace
    smace.*
